package com.gykj.cameramodule.activity.camera.view;

public interface Rotatable {
    public void setOrientation(int orientation, boolean isAnimator);
}
